welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:7: error: too many arguments for method reculex: ()Unit
	reculex(5);
               ^FlowerPot:14: error: too many arguments for method reculex: ()Unit
	reculex(3);
               ^FlowerPot:19: error: too many arguments for method reculex: ()Unit
	reculex(3);
               ^FlowerPot:39: error: not found: value x
	for (i <- 1 to x)
                       ^FlowerPot:53: error: too many arguments for method reculex: ()Unit
	reculex(2);
               ^